# rust-ethereum

./: .env.template  Cargo.toml  Makefile  README.md
cli/: Cargo.toml
cli/src/: main.rs
ethereum/: .env.default  .gitignore  Makefile  hardhat.config.ts  package-lock.json  package.json
ethereum/contracts/: Nft1155.sol  Nft721.sol
ethereum/private-net/: genesis.json  history
ethereum/private-net/geth/: nodekey  transactions.rlp
ethereum/private-net/geth/chaindata/: 000002.ldb  000005.ldb  000008.ldb  LOG  MANIFEST-000010
ethereum/private-net/geth/lightchaindata/: LOG
ethereum/private-net/geth/nodes/: 000002.ldb  000005.ldb  LOG  MANIFEST-000007
ethereum/private-net/keystore/: UTC--2022-11-09T06-23-15.143530000Z--1341048e3d37046ca18a09efb154ea9771744f41  UTC--2022-11-16T13-09-33.618428000Z--84e4510704622762897e823e8e452c8736a2af59
ethereum/scripts/: deploy-nft-1155.ts  deploy-nft-721.ts
ethereum/test/: Nft1155.ts  Nft721.ts
impl_rust_web3/: Cargo.toml
impl_rust_web3/src/: lib.rs
impl_rust_web3/src/nft_1155/: abi.json  bin  client.rs
impl_rust_web3/src/nft_721/: abi.json  bin  client.rs
ipfs/: Cargo.toml
ipfs/src/: lib.rs  metadata.rs
prelude/: Cargo.toml
prelude/src/: lib.rs  unit.rs
