[package]
name = "rust-ethereum"
version = "0.1.0"
authors = ["akiho <aki030402@mail.com>"]
description = "Ethereum CLI"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
prelude = { path = "../prelude" }
impl_rust_web3 = { path = "../impl_rust_web3" }
ipfs = { path = "../ipfs" }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
thiserror = "1.0.24"
clap = { version = "4.2.4", features = ["derive"] }