[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json", "multipart"] }
bytes = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
url = { version = "2.2.2", features = ["serde"] }
thiserror = "1.0.24"